# IOStreams-2.0

./: CMakeLists.txt  README.md
include/ios2/concepts/: OStream.hpp
include/ios2/concepts/detail/: void_t.hpp
include/ios2/streams/: stdostream.hpp
